operator_Vivado/testing_area/rework_int_division/div3/div3.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

INFO: [HLS 200-10] Setting target device to 'xc7k160tfbg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 2.5ns.
INFO: [HLS 200-10] Analyzing design file 'test.cpp' ... 
WARNING: [HLS 200-40] In file included from test.cpp:1:
test.cpp:56:15: error: no matching member function for call to 'concat'
 q[27] = q3[r.concat(d.range(27,24))];
            ~~^~~~~~
/opt/Xilinx/Vivado/2018.2/common/technology/autopilot/ap_int_syn.h:2211:109: note: candidate template ignored: failed template argument deduction
  inline __attribute__((always_inline)) ap_concat_ref<_AP_W,ap_int_base,_AP_W2,ap_int_base<_AP_W2,_AP_S2> > concat(const ap_int_base<_AP_W2,_AP_S2>& a2) const {
                                                                                                            ^
/opt/Xilinx/Vivado/2018.2/common/technology/autopilot/ap_int_syn.h:2217:109: note: candidate template ignored: failed template argument deduction
  inline __attribute__((always_inline)) ap_concat_ref<_AP_W,ap_int_base,_AP_W2,ap_int_base<_AP_W2,_AP_S2> > concat(ap_int_base<_AP_W2,_AP_S2>& a2) {
                                                                                                            ^
1 error generated.\n
ERROR: [HLS 200-70] Compilation errors found: Pragma processor failed: In file included from test.cpp:1:
test.cpp:56:15: error: no matching member function for call to 'concat'
 q[27] = q3[r.concat(d.range(27,24))];
            ~~^~~~~~
/opt/Xilinx/Vivado/2018.2/common/technology/autopilot/ap_int_syn.h:2211:109: note: candidate template ignored: failed template argument deduction
  inline __attribute__((always_inline)) ap_concat_ref<_AP_W,ap_int_base,_AP_W2,ap_int_base<_AP_W2,_AP_S2> > concat(const ap_int_base<_AP_W2,_AP_S2>& a2) const {
                                                                                                            ^
/opt/Xilinx/Vivado/2018.2/common/technology/autopilot/ap_int_syn.h:2217:109: note: candidate template ignored: failed template argument deduction
  inline __attribute__((always_inline)) ap_concat_ref<_AP_W,ap_int_base,_AP_W2,ap_int_base<_AP_W2,_AP_S2> > concat(ap_int_base<_AP_W2,_AP_S2>& a2) {
                                                                                                            ^
1 error generated.
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2018.2
Copyright (C) 1986-2018 Xilinx, Inc. All Rights Reserved.

==============================================================

